PP-12365 add find tokens by service API